# Automated-Test-Framework

./: .gitignore  README.md  pyproject.toml
examples/: sample_run.txt
src/hwtest/: __init__.py  hardware.py  models.py  runner.py
src/hwtest/tests/: base.py  test_current_sensor.py  test_signal_module.py  test_temperature_sensor.py  test_voltage_regulator.py
