[project]
name = "hwtest"
version = "0.1.0"
description = "Simulated hardware test automation framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
